# nativessl-app

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/nativessl/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/openssl/openssl/: configuration.h
app/src/main/java/com/nativessl/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: cert.der
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/nativessl/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
